[package]
name = "rtop"
version = "0.1.2"
authors = ["Naren Dasan <naren@narendasan.com>"]
description = "A system monitor implemented in Rust, Monitors both system activity and GPU activity for NVIDIA GPUs"
homepage = "https://github.com/narendasan/rtop"
readme = "README.md"
keywords = [
    "system",
    "monitor",
    "info",
    "usage",
    "gpu",
]
categories = ["development-tools"]
license = "NCSA"
edition = "2018"
build = "build.rs"

[features]
gpu-monitor = [
    "nvml-wrapper",
#    "phf"
]
battery-monitor = ["battery"]

[build-dependencies]
dirs = "1.0.5"

[dependencies]
termion = "1.5.5"
log = "0.4.8"
stderrlog = "0.4.3"
tui = "0.9.1"
sysinfo = "0.10.3"
battery = {version = "0.7.5", optional = true}
nvml-wrapper = {version = "0.5.0", optional = true}
#phf = { version = "0.8.0", optional = true, features = ["macros"]}

