[package]
name = "rtop"
version = "0.1.4"
authors = ["Naren Dasan <naren@narendasan.com>"]
description = "A system monitor implemented in Rust, Monitors both system activity and GPU activity for NVIDIA GPUs"
homepage = "https://github.com/narendasan/rtop"
readme = "README.md"
keywords = [
    "system",
    "monitor",
    "info",
    "usage",
    "gpu",
]
categories = ["development-tools"]
license = "NCSA"
edition = "2018"
build = "build.rs"

[features]
gpu-monitor = [
    "nvml-wrapper",
#    "phf"
]
battery-monitor = ["battery"]

[build-dependencies]
dirs = "1.0.5"

[dependencies]
termion = "1.5.5"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"] }
stderrlog = "0.5.1"
tui = "0.16.0"
sysinfo = "0.21.2"
battery = {version = "0.7.8", optional = true}
nvml-wrapper = {version = "0.7.0", optional = true}
#phf = { version = "0.8.0", optional = true, features = ["macros"]}

