[package]
name = "rtop"
version = "0.1.5"
authors = ["Naren Dasan <naren@narendasan.com>"]
description = "A system monitor implemented in Rust, Monitors both system activity and GPU activity for NVIDIA GPUs"
homepage = "https://github.com/narendasan/rtop"
readme = "README.md"
keywords = ["system", "monitor", "info", "usage", "gpu"]
categories = ["development-tools"]
license = "NCSA"
edition = "2021"
build = "build.rs"

[features]
gpu-monitor = [
    "nvml-wrapper",
    #    "phf"
]
battery-monitor = ["battery"]

[build-dependencies]
dirs = "5.0.1"

[dependencies]
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
stderrlog = "0.6.0"
sysinfo = "0.33.0"
battery = { version = "0.7.8", optional = true }
nvml-wrapper = { version = "0.10.0", optional = true }
ratatui = "0.29.0"
crossterm = "0.28.1"
#phf = { version = "0.8.0", optional = true, features = ["macros"]}
